# ramp-book

./: Makefile  README.md  docker-compose.yaml  sample.env
Docs/: similar_softwares.txt
Docs/mvp/: seed-data.json
Docs/server/: setup.txt
apps/client/: .dockerignore  package-lock.json  package.json  pnpm-lock.yaml
apps/server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements.txt
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0a0e657f649f_init.py  5e2b3013715b_init.py  8462d33c6d64_auto.py  9cf85291bd6b_init.py  b1ccf4e21bff_init.py  e458588aa95d_auto.py
apps/server/api/: main.py
apps/server/entities/: user.py
apps/server/scripts/: seed.py
apps/server/src/: __init__.py
apps/server/src/api/: admin.py  aircraft.py  auth.py  health.py  main.py  reservations.py  users.py
apps/server/src/core/: aircraftsvc.py  reservationsvc.py  usrsvc.py
apps/server/src/decorators/: auth.py
apps/server/src/entities/: aircraft.py  base.py  club.py  maintenance_window.py  models.py  reservation.py  user.py
apps/server/src/repositories/: aircraft.py  maintenance.py  reservations.py  users.py
apps/server/src/schemas/: aircraft.py  auth.py  health.py  maintenance.py  meta.py  reservation.py  user.py
apps/server/src/svc/: aircraftsvc.py  dbsvc.py  envsvc.py  errsvc.py  jobsvc.py  logsvc.py  reservationsvc.py  secsvc.py  seshsvc.py  usrsvc.py
apps/server/svc/: dbsvc.py  envsvc.py  secsvc.py  setting.py
docs/: decision.txt  implementation_plan.txt  questions.txt
docs/client/: setup.txt
infra/: docker-compose.yaml  sample.env
(+46 files in other folders)
